--- a/barber/Style.css
+++ b/barber/Style.css
@@ -1,5 +1,17 @@
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    gap: 50px;
+    align-items:center; 
+}
+
+.grid-item {
+    object-fit: cover;
+    width: fit-content;
+}
+html, body {
+	margin: 0;
+	padding: 0;
+	max-height: 100vh;
+	max-width: 100vw;
+	overflow: hidden;
 }
