--- a/barber/Style.css
+++ b/barber/Style.css
@@ -1,17 +1,26 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    align-items:center; 
-}
 
-.grid-item {
-    object-fit: cover;
-    width: fit-content;
-}
+
 html, body {
 	margin: 0;
 	padding: 0;
 	max-height: 100vh;
 	max-width: 100vw;
 	overflow: hidden;
+   
+}
+
+.background{
+    z-index: 1;
+    position: absolute;
+}
+.shade {
+    position: relative;
+    opacity: 60%;
+    z-index: 2;
+    width: auto;
+}
+.BarberLable {
+    position: relative;
+    z-index: 3;
+    font-size: 30px;
 }
