--- a/barber/Style.css
+++ b/barber/Style.css
@@ -1,5 +1,3 @@
-
-
 html, body {
 	margin: 0;
 	padding: 0;
@@ -8,19 +6,24 @@ html, body {
 	overflow: hidden;
    
 }
-
-.background{
-    z-index: 1;
-    position: absolute;
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+	align-items: center;
 }
-.shade {
-    position: relative;
-    opacity: 60%;
-    z-index: 2;
-    width: auto;
+#overlay {
+	position: absolute; 
+	width: 100vw; 
+	height: 100vh;
+	background-color: rgba(0,0,0,0.6);
 }
-.BarberLable {
-    position: relative;
-    z-index: 3;
-    font-size: 30px;
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 0px solid rgba(0, 0, 0, 0.8);
+  padding: 0px;
+  font-size: 30px;
+  text-align: center;
+  background-size: cover;
+  min-height: 33.4vh;
+  min-width: 25vw;
 }
