--- a/barber/Style.css
+++ b/barber/Style.css
@@ -33,7 +33,8 @@ html, body {
 #button {
 	position: absolute;
 	top:  60%;
-    left: 50%;    transform: translate(-50%,-50%);
+    left: 50%;    
+	transform: translate(-50%,-50%);
 	background-color: rgba(220, 147, 11, 0.6);
 	width: 100 px;
 	border-radius: 5px;
@@ -42,9 +43,24 @@ html, body {
 #button:hover {
 	background-color: rgba(220, 147, 11, 0.9);
 }
-@media (orientation: landscape) and (max-height: 200px){
-	.grid-item {min-height: 100vh;}
+@media (min-width: 330px){
+	.grid-item {min-width: 50vw;}
 }
+@media (min-width: 500px){
+	.grid-item {min-width: 33,4vw;}
+}
+@media (min-width: 800px){
+	.grid-item {min-width: 25vw;}
+}
+
+@media(max-height: 400px){
+	.grid-item{min-height: 100vh;}
+}
+
+@media(min-height: 800px){
+	.grid-item{min-height: 33.3vh;}
+}
+
 
 
 
