--- a/web_cv/style_dark_dark.css
+++ b/web_cv/style_dark_dark.css
@@ -20,7 +20,7 @@ a:focus{color:#046c40;text-decoration:none;}
 h1{font-weight:700;}
 h2, h3, h4{font-weight:600;}
 h5, h6{font-weight:500;}
-p, a, li{font-weight:400;}
+p, a, li{font-weight:400; }
 h6{font-size:1.4em;}
 .is-hidden{visibility:hidden;}
 .btn{padding-top:8px;}
@@ -32,6 +32,8 @@ video{border:3px solid black;}
 .card{position:relative;background-color:#282828;transition:box-shadow .25s;-webkit-transition:box-shadow .25s;border-radius:0 !important;margin:8px 0;}
 .card .card-content{padding:40px;border-radius:0 0 2px 2px;}
 .card .card-content p{margin:0;color:inherit;text-align:center;}
+
+.card .card-content-blog p{text-align:left;}
 .modal{padding-right:0 !important;padding-left:0 !important;}
 .modal .modal-content{border-radius:0 !important;background-color:#282828;color:#7b7b7b;}
 .modal .modal-content .modal-body{position:relative;padding:0 40px;text-align:justify;}
@@ -163,10 +165,15 @@ body.scale-effect .btn-holder .btn-play{transform:scale(28);-webkit-transform:sc
 #v-card-holder #v-card .info-headings h6{margin-bottom:20px;}
 #v-card-holder #v-card .card-content{padding:10px;}
 }
-#about{transition:all 1s;}
+#about{transition:all 1s; }
 #about .about-btn{height:auto;margin-right:auto;margin-left:auto;animation-delay:1s;text-align:center;}
 #about .about-btn .btn{margin:7px 7px;background:#06A763;color:#282828;width:180px;border-radius:2px;}
 #about .about-btn .btn:hover{background:#05985a;}
+#blog{ float: left; }
+#blog .blog-btn{height:auto;margin-right:auto;margin-left:0px;  animation-delay:1s;text-align:center;}
+#blog .blog-btn .btn{background:#06A763;color:#282828;width:140px;border-radius:2px; margin-top: 15px;}
+#blog .blog-btn .btn:hover{background:#05985a;}
+#blog1{float: left; margin-bottom: 20px;}
 #timeline-education{position:relative;}
 #timeline-education:before{content:'';position:absolute;top:0;bottom:23px;left:50%;height:99.5%;width:4px;opacity:0.3;background:#06A763;}
 #timeline-experience{position:relative;}
@@ -392,12 +399,12 @@ to{-webkit-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0);}
 #blog .blog .image{height:20em;width:100%;}
 #blog .blog .content{text-align:center;width:100%;}
 }
-#contact .card .card-content{}
+#contact .card .card-content{text-align: left;}
 #contact .card .card-content .input-field{position:relative;margin-top:1rem;margin-bottom:12px;}
 #contact .card .card-content .input-field label{left:0;font-weight:normal;top:0.5rem;}
 #contact .card .card-content .btn{background-color:#06A763;width:115px;color:#282828;border-radius:2px;margin-top:7px;}
 #contact .card .card-content .btn:hover{background:#05985a;}
-#contact .card .card-content .thankyou{text-align:center;}
+#contact .card .card-content .thankyou{text-align:left;}
 #contact .card .progress{position:relative;height:4px;display:block;width:100%;background-color:#06A763;border-radius:0;margin:-4px 0 0;}
 #contact .card .indeterminate{background-color:#282828;}
 #contact #myMap{width:100%;height:417px;}
@@ -412,6 +419,7 @@ to{-webkit-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0);}
 #contact input:not([type]), #contact input[type=text], #contact input[type=password], #contact input[type=email], #contact input[type=url], #contact input[type=time], #contact input[type=date], #contact input[type=datetime-local], #contact input[type=tel], #contact input[type=number], #contact input[type=search], #contact textarea.materialize-textarea{background-color:transparent;border:none;border-bottom:1px solid #0c0c0c;border-radius:0;outline:none;height:2rem;width:100%;font-size:1rem;margin:6px 0 6px 0;padding:0;box-shadow:none;box-sizing:content-box;transition:all .5s;}
 #contact textarea.materialize-textarea{overflow-y:hidden;resize:none;min-height:5rem;}
 #scrollup{color:#282828;height:45px;width:45px;cursor:pointer;font-size:28px;background:#06A763;border:1px solid #06A763;text-align:center;position:fixed;bottom:21px;right:18px;z-index:5;box-shadow:0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);display:none;transition:.3s;}
+#blogbtn{color:#7c0909;height:45px;width:45px;cursor:pointer;font-size:28px;background:#06A763;border:1px solid #06A763;text-align:center;position:fixed;bottom:21px;right:18px;z-index:5;box-shadow:0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);display:none;transition:.3s;}
 footer{width:100%;height:auto;color:#282828;margin-top:-18px;margin-bottom:9px;}
 .back-button{height:45px;width:45px;cursor:pointer;font-size:28px;background:#06A763;border:1px solid #06A763;text-align:center;position:fixed;top:21px;left:18px;z-index:8;box-shadow:0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);transition:.3s;}
 .back-button i{color:#282828;padding-right:3px;padding-top:8px;}
