--- a/barber/Style.css
+++ b/barber/Style.css
@@ -29,7 +29,7 @@ html, body {
 	min-height: 33.4vh;
 	min-width: 25vw;
   }
-
+ 
   #headtitle {
 	color: white;
 	text-align: center;
@@ -45,39 +45,36 @@ html, body {
 }
 #buttons {
 	position: absolute;
-	top:  60%;
+	top:  70%;
     left: 50%;    
 	transform: translate(-50%,-50%);
 	display: flex;
 	grid-gap: 20px;
-	align-items: center;
-
-	
+	align-self: center;
 }
 #button {
-	
-
 	background-color: rgba(220, 147, 11, 0.6);
-	width: 100 px;
+	width: 100px;
 	height: 50px;
 	border-radius: 5px;
-
+	border: 0px;
 }
 #map-button {
-	
-
 	background-color: rgba(220, 147, 11, 0.6);
-	width: 100 px;
+	width: 70px;
 	height: 50px;
 	border-radius: 5px;
+	border: 0px;
 }
 #ig-button {
-	background-image:url('media/iglogo.png') ;
+	background-image:url('media/iglogo.png');
 	background-size: cover;
+	background-color: transparent;
 	opacity: 0.6;
-	min-width: 50px;
-	min-height: 50px;
+	width: 50px;
+	height: 50px;
 	border-radius: 5px;
+	border: 0px;
 }
 #map-button:hover {
 	background-color: rgba(220, 147, 11, 0.9);
@@ -88,6 +85,8 @@ html, body {
 #button:hover {
 	background-color: rgba(220, 147, 11, 0.9);
 }
+
+
 @media (min-width: 330px){
 	.grid-item {min-width: 50vw;}
 }
