--- a/barber/Style.css
+++ b/barber/Style.css
@@ -37,6 +37,8 @@ html, body {
 }
 #contact {
 	position: absolute;
+	display: grid;
+	grid-gap: 10px;
 	top:  40%;
     left: 50%;  
 	color: white;
@@ -58,16 +60,18 @@ html, body {
 	height: 50px;
 	border-radius: 5px;
 	border: 0px;
+	font-family: RobotoFontH1;
+
 }
 #map-button {
-	background-color: rgba(220, 147, 11, 0.6);
-	width: 70px;
+	width: 50px;
 	height: 50px;
 	border-radius: 5px;
 	border: 0px;
+	opacity: 0.6;
+
 }
 #ig-button {
-	background-image:url('media/iglogo.png');
 	background-size: cover;
 	opacity: 0.6;
 	width: 50px;
@@ -76,7 +80,7 @@ html, body {
 	border: 0px;
 }
 #map-button:hover {
-	background-color: rgba(220, 147, 11, 0.9);
+opacity: 1;
 }
 #ig-button:hover {
 	opacity: 1;
@@ -84,7 +88,26 @@ html, body {
 #button:hover {
 	background-color: rgba(220, 147, 11, 0.9);
 }
+.links {
+	color: white;
+	opacity: 0.6;
+	font-size: 24px;
+	font-family: RobotoFontH1;
 
+}
+
+.links:hover {
+	opacity: 1;
+	
+}
+#headtitle {
+	font-family: RobotoFontH1;
+}
+
+@font-face {
+	font-family: RobotoFontH1;
+	src: url(/barber/fonts/Roboto-Regular.ttf);
+  }
 
 @media (min-width: 330px){
 	.grid-item {min-width: 50vw;}
