--- a/barber/Style.css
+++ b/barber/Style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: RobotoFontH1;
+	src: url(/barber/fonts/Roboto-Regular.ttf);
+}
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -55,13 +60,28 @@ html, body {
 	align-self: center;
 }
 #button {
-	background-color: rgba(220, 147, 11, 0.6);
-	width: 100px;
-	height: 50px;
+	background-color: transparent;
+	width: 140px;
+	height: 70px;
 	border-radius: 5px;
-	border: 0px;
+	border-width: 5px;
+	border-color: white;
 	font-family: RobotoFontH1;
+	color: white;
+	opacity: 0.6;
+	font-size: 15px;
+}
 
+#button:hover {
+	opacity: 1;
+}
+
+#bg-icon{
+	width: 400px;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	opacity: 0.8;
 }
 #map-button {
 	width: 50px;
@@ -85,9 +105,7 @@ opacity: 1;
 #ig-button:hover {
 	opacity: 1;
 }
-#button:hover {
-	background-color: rgba(220, 147, 11, 0.9);
-}
+
 .links {
 	color: white;
 	opacity: 0.6;
@@ -104,10 +122,7 @@ opacity: 1;
 	font-family: RobotoFontH1;
 }
 
-@font-face {
-	font-family: RobotoFontH1;
-	src: url(/barber/fonts/Roboto-Regular.ttf);
-  }
+
 
 @media (min-width: 330px){
 	.grid-item {min-width: 50vw;}
