--- a/barber/Style.css
+++ b/barber/Style.css
@@ -39,6 +39,7 @@ html, body {
 	color: white;
 	text-align: center;
 	font-size: 50px;
+	margin: 0px;
 }
 #contact {
 	position: absolute;
@@ -52,9 +53,8 @@ html, body {
 }
 #buttons {
 	position: absolute;
-	top:  70%;
-    left: 50%;    
-	transform: translate(-50%,-50%);
+	top:  80%;
+    left: 45%;    
 	display: flex;
 	grid-gap: 20px;
 	align-self: center;
@@ -77,7 +77,7 @@ html, body {
 }
 
 #bg-icon{
-	width: 400px;
+	width: 200px;
 	height: auto;
 	margin-left: auto;
 	margin-right: auto;
