--- a/barber/Style.css
+++ b/barber/Style.css
@@ -126,7 +126,7 @@ opacity: 1;
 
 
 
-@media only screen and (min-width:501px) and (max-width: 950px) {
+@media only screen and (min-width:401px) and (max-width: 950px) {
 	#contact {
 		position: absolute;
 		display: grid;
@@ -145,12 +145,12 @@ opacity: 1;
 	}
 
   }
-  @media only screen and (max-width: 500px) {
+  @media screen and (max-width: 400px)  {
 	#contact {
 		position: absolute;
 		display: grid;
 		grid-gap: 10px;
-		top:  30%;
+		top:  10%;
 		left: 50%;  
 		color: white;
 		text-align: center;
