--- a/barber/Style.css
+++ b/barber/Style.css
@@ -1,194 +1,187 @@
 @font-face {
-	font-family: RobotoFontH1;
-	src: url(/barber/fonts/Roboto-Regular.ttf);
+    font-family: RobotoFontH1;
+    src: url(/barber/fonts/Roboto-Regular.ttf);
 }
 
-html, body {
-	margin: 0;
-	padding: 0;
-	max-height: 100vh;
-	max-width: 100vw;
-	overflow: hidden;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    max-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 #overlay {
-	position: absolute; 
-	width: 100vw; 
-	height: 100vh;
-	background-color: rgba(0,0,0,0.9);
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
-	align-items: center;
+    align-items: center;
 }
 
 .grid-item {
-	background-color: rgba(255, 255, 255, 0.8);
-	border: 0px solid rgba(0, 0, 0, 0.8);
-	padding: 0px;
-	font-size: 30px;
-	text-align: center;
-	background-size: cover;
-	min-height: 33.4vh;
-	min-width: 25vw;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 0px solid rgba(0, 0, 0, 0.8);
+    padding: 0px;
+    font-size: 30px;
+    text-align: center;
+    background-size: cover;
+    min-height: 33.4vh;
+    min-width: 25vw;
 }
+
 #contact {
-	position: absolute;
-	display: grid;
-	grid-gap: 10px;
-	top:  40%;
-    left: 50%;  
-	color: white;
-	text-align: center;
-	transform: translate(-50%,-50%);
+    position: absolute;
+    display: grid;
+    grid-gap: 10px;
+    top: 40%;
+    left: 50%;
+    color: white;
+    text-align: center;
+    transform: translate(-50%, -50%);
 }
+
 #buttons {
-	position: absolute;
-	top:  85%;
-    left: 40%;    
-	display: flex;
-	grid-gap: 20px;
-	align-self: center;
-	width: 20%;
+    position: absolute;
+    top: 85%;
+    left: 40%;
+    display: flex;
+    grid-gap: 20px;
+    align-self: center;
+    width: 20%;
 }
+
 #button {
-	background-color: transparent;
-	width: 140px;
-	height: 70px;
-	border-radius: 5px;
-	border-width: 5px;
-	border-color: white;
-	font-family: RobotoFontH1;
-	color: white;
-	opacity: 0.6;
-	font-size: 15px;
+    background-color: transparent;
+    width: 140px;
+    height: 70px;
+    border-radius: 5px;
+    border-width: 5px;
+    border-color: white;
+    font-family: RobotoFontH1;
+    color: white;
+    opacity: 0.6;
+    font-size: 15px;
 }
 
 #button:hover {
-	opacity: 1;
+    opacity: 1;
 }
 
-#bg-icon{
-	width: 200px;
-	height: auto;
-	margin-left: auto;
-	margin-right: auto;
-	opacity: 0.8;
+#bg-icon {
+    width: 200px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.8;
 }
+
 #map-button {
-	width: 50px;
-	height: 50px;
-	border-radius: 5px;
-	border: 0px;
-	opacity: 0.6;
-	
-}
-#ig-button {
-	background-size: cover;
-	opacity: 0.6;
-	width: 50px;
-	height: 50px;
-	border-radius: 5px;
-	border: 0px;
-	
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: 0px;
+    opacity: 0.6;
 
 }
-#map-button:hover {
-opacity: 1;
+
+#ig-button {
+    background-size: cover;
+    opacity: 0.6;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: 0px;
+
+
 }
+
+#map-button:hover {
+    opacity: 1;
+}
+
 #ig-button:hover {
-	opacity: 1;
+    opacity: 1;
 }
 
 .links {
-	color: white;
-	opacity: 0.6;
-	font-size: 24px;
-	font-family: RobotoFontH1;
+    color: white;
+    opacity: 0.6;
+    font-size: 24px;
+    font-family: RobotoFontH1;
 
 }
 
 .links:hover {
-	opacity: 1;
-	
+    opacity: 1;
+
 }
 
 #headtitle {
-	color: white;
-	text-align: center;
-	font-size: 50px;
-	margin: 0px;
-	font-family: RobotoFontH1;
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    margin: 0px;
+    font-family: RobotoFontH1;
 
 }
 
 
+@media only screen and (min-width:400px) and (max-width: 950px) {
+    #contact {
+        position: absolute;
+        display: grid;
+        grid-gap: 10px;
+        top: 40%;
+        left: 50%;
+        color: white;
+        text-align: center;
+        transform: translate(-50%, -50%);
+    }
 
-@media only screen and (min-width:401px) and (max-width: 950px) {
-	#contact {
-		position: absolute;
-		display: grid;
-		grid-gap: 10px;
-		top:  40%;
-		left: 50%;  
-		color: white;
-		text-align: center;
-		transform: translate(-50%,-50%);
-	}
-	#bg-icon{
-		width: 150px;
-	}
-	#headtitle{
-		font-size: 35px;
-	}
+    #bg-icon {
+        width: 150px;
+    }
 
-  }
-  @media screen and (max-width: 400px)  {
-	#contact {
-		position: absolute;
-		display: grid;
-		grid-gap: 10px;
-		top:  10%;
-		left: 50%;  
-		color: white;
-		text-align: center;
-		transform: translate(-50%,-50%);
-	}
-	#bg-icon{
-		width: 100px;
-	}
-	#headtitle{
-		font-size: 26px;
-	}
-	#buttons {
-		position: absolute;
-		top:  70%;
-		left: 37%;    
-		display: flex;
-		grid-gap: 20px;
-		align-self: center;
-		width: 20%;
-	}
-  }
-  
+    #headtitle {
+        font-size: 35px;
+    }
 
+}
 
+@media only screen and (max-width: 400px) {
+    #contact {
+        position: absolute;
+        display: grid;
+        grid-gap: 10px;
+        top: 40%;
+        left: 50%;
+        color: white;
+        text-align: center;
+        transform: translate(-50%, -50%);
+    }
 
+    #bg-icon {
+        width: 100px;
+    }
 
+    #headtitle {
+        font-size: 26px;
+    }
 
-
-
-
-
-
- 
-
-
-
-
-
-
-  
-
+    #buttons {
+        position: absolute;
+        top: 80%;
+        left: 34%;
+        display: flex;
+        grid-gap: 20px;
+        align-self: center;
+        width: 20%;
+    }
+}
